# mcp-server-12306

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
doc/: get_train_route_stations.md  query_transfer.md  search_stations.md
docs/: get_current_time.md  get_station_info.md  get_train_route_stations.md  query_tickets.md  query_transfer.md  search_stations.md
scripts/: start_server.py  update_stations.py
src/mcp_12306/: __init__.py  server.py
src/mcp_12306/models/: __init__.py  query.py  station.py  ticket.py
src/mcp_12306/resources/: station_name.js
src/mcp_12306/services/: __init__.py  http_client.py  station_service.py  ticket_service.py
src/mcp_12306/utils/: __init__.py  config.py  date_utils.py
